--- a/src/empenofacil/view/Clientes.fxml
+++ b/src/empenofacil/view/Clientes.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -18,7 +24,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="empenofacil.controller.ClientesController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ClientesController">
     <children>
       <AnchorPane>
          <children>
@@ -77,15 +83,21 @@
                     </rowConstraints>
                     <children>
                         <Label text="Nombre" />
-                        <Label text="--" GridPane.columnIndex="1" />
                         <Label text="Apellido Paterno" GridPane.rowIndex="1" />
                         <Label text="Apellido Materno" GridPane.rowIndex="2" />
                         <Label text="Fecha nacimiento" GridPane.rowIndex="3" />
                         <Label text="CURP" GridPane.rowIndex="4" />
                         <Label text="RFC" GridPane.rowIndex="5" />
-                        <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <DatePicker fx:id="fechaNacimientoD" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Telefono" GridPane.rowIndex="6" />
                         <Label text="Celular" GridPane.rowIndex="7" />
+                  <TextField fx:id="nombreT" GridPane.columnIndex="1" />
+                  <TextField fx:id="apellidoPT" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="apellidoMT" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="curpT" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="rfcT" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="telefonoT" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="celularT" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                     </children>
                     <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -99,13 +111,13 @@
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Calle" HBox.hgrow="NEVER" />
-                                        <TextField />
+                                        <TextField fx:id="calleT" />
                                     </children>
                                 </HBox>
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Numero" />
-                                        <TextField />
+                                        <TextField fx:id="numeroT" />
                                     </children>
                                 </HBox>
                             </children>
@@ -115,13 +127,13 @@
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Colonia" HBox.hgrow="NEVER" />
-                                        <TextField />
+                                        <TextField fx:id="coloniaT" />
                                     </children>
                                 </HBox>
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Codigo postal" />
-                                        <TextField />
+                                        <TextField fx:id="codigoPostalT" />
                                     </children>
                                 </HBox>
                             </children>
@@ -131,7 +143,7 @@
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Localidad" HBox.hgrow="NEVER" />
-                                        <TextField />
+                                        <TextField fx:id="localidadT" />
                                     </children>
                                 </HBox>
                             </children>
@@ -141,13 +153,13 @@
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Estado" HBox.hgrow="NEVER" />
-                                        <ComboBox prefWidth="150.0" />
+                              <ChoiceBox fx:id="estadoC" prefWidth="150.0" />
                                     </children>
                                 </HBox>
                                 <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
                                     <children>
                                         <Label text="Municipio" />
-                                        <ComboBox prefWidth="150.0" />
+                              <ChoiceBox fx:id="municipioC" prefWidth="150.0" />
                                     </children>
                                 </HBox>
                             </children>
