--- a/src/empenofacil/view/Clientes.fxml
+++ b/src/empenofacil/view/Clientes.fxml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ClientesController">
+<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ClientesController">
     <children>
       <AnchorPane>
          <children>
@@ -33,14 +20,14 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" text="Nuevo cliente" AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="0.0" />
+            <Button mnemonicParsing="false" onAction="#nuevo" text="Nuevo cliente" AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="0.0" />
             <TextField fx:id="buscar" promptText="Buscar cliente..." AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-              <TableView prefHeight="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+              <TableView fx:id="clientes" prefHeight="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
                   <columns>
-                      <TableColumn prefWidth="75.0" text="Nombre" />
-                      <TableColumn prefWidth="75.0" text="Apellido Paterno" />
-                      <TableColumn prefWidth="75.0" text="Apellido Materno" />
-                      <TableColumn prefWidth="75.0" text="Dirección" />
+                      <TableColumn fx:id="nombre" prefWidth="75.0" text="Nombre" />
+                      <TableColumn fx:id="apellidoP" prefWidth="75.0" text="Apellido Paterno" />
+                      <TableColumn fx:id="curp" prefWidth="75.0" text="CURP" />
+                      <TableColumn fx:id="rfc" prefWidth="75.0" text="RFC" />
                   </columns>
                   <columnResizePolicy>
                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -48,125 +35,27 @@
               </TableView>
          </children>
          <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="-5.0" left="5.0" right="5.0" top="5.0" />
          </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </AnchorPane>
-        <HBox>
-            <children>
-                <VBox alignment="TOP_CENTER">
-                    <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button mnemonicParsing="false" text="Subir imagen" />
-                    </children>
-                    <opaqueInsets>
-                        <Insets />
-                    </opaqueInsets>
-                    <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                    </HBox.margin>
-                </VBox>
-                <Separator orientation="VERTICAL" prefHeight="200.0" />
-                <GridPane>
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                    <children>
-                        <Label text="Nombre" />
-                        <Label text="Apellido Paterno" GridPane.rowIndex="1" />
-                        <Label text="Apellido Materno" GridPane.rowIndex="2" />
-                        <Label text="Fecha nacimiento" GridPane.rowIndex="3" />
-                        <Label text="CURP" GridPane.rowIndex="4" />
-                        <Label text="RFC" GridPane.rowIndex="5" />
-                        <DatePicker fx:id="fechaNacimientoD" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label text="Telefono" GridPane.rowIndex="6" />
-                        <Label text="Celular" GridPane.rowIndex="7" />
-                  <TextField fx:id="nombreT" GridPane.columnIndex="1" />
-                  <TextField fx:id="apellidoPT" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="apellidoMT" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="curpT" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField fx:id="rfcT" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField fx:id="telefonoT" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="celularT" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                    </children>
-                    <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                    </HBox.margin>
-                </GridPane>
-                <Separator orientation="VERTICAL" prefHeight="200.0" />
-                <VBox>
-                    <children>
-                        <HBox VBox.vgrow="NEVER">
-                            <children>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Calle" HBox.hgrow="NEVER" />
-                                        <TextField fx:id="calleT" />
-                                    </children>
-                                </HBox>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Numero" />
-                                        <TextField fx:id="numeroT" />
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="10.0">
-                            <children>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Colonia" HBox.hgrow="NEVER" />
-                                        <TextField fx:id="coloniaT" />
-                                    </children>
-                                </HBox>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Codigo postal" />
-                                        <TextField fx:id="codigoPostalT" />
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="35.0">
-                            <children>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Localidad" HBox.hgrow="NEVER" />
-                                        <TextField fx:id="localidadT" />
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="35.0">
-                            <children>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Estado" HBox.hgrow="NEVER" />
-                              <ChoiceBox fx:id="estadoC" prefWidth="150.0" />
-                                    </children>
-                                </HBox>
-                                <HBox alignment="BASELINE_CENTER" HBox.hgrow="NEVER">
-                                    <children>
-                                        <Label text="Municipio" />
-                              <ChoiceBox fx:id="municipioC" prefWidth="150.0" />
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
-        </HBox>
+      <VBox fx:id="form">
+         <VBox.margin>
+            <Insets left="-10.0" right="-10.0" />
+         </VBox.margin></VBox>
+      <HBox fx:id="acciones" alignment="TOP_RIGHT" spacing="10.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Button mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+            <Button fx:id="guardar" mnemonicParsing="false" onAction="#guardar" text="Guardar" />
+         </children>
+         <VBox.margin>
+            <Insets bottom="10.0" left="5.0" right="5.0" top="-5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="5.0" right="5.0" top="-5.0" />
+         </padding>
+      </HBox>
     </children>
 </VBox>
