Agregado módulo Empleado - Nuevo empleado

--- a/src/empenofacil/view/Menu.fxml
+++ b/src/empenofacil/view/Menu.fxml
@@ -47,6 +47,11 @@
             </TabPane>
          </content>
       </Tab>
+      <Tab text="Empleados">
+        <content>
+          <fx:include source="Empleados.fxml" />
+        </content>
+      </Tab>
       <Tab text="Clientes">
          <content>
             <fx:include source="Clientes.fxml" />
