Iniciado módulo Empeño - Crear empeño

--- a/src/empenofacil/view/Menu.fxml
+++ b/src/empenofacil/view/Menu.fxml
@@ -31,21 +31,8 @@
       </Tab>
       <Tab text="Empeños">
          <content>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Nuevo">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                <Tab text="Finiquito">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-         </content>
+          <fx:include source="Contratos.fxml" />
+        </content>
       </Tab>
       <Tab text="Empleados">
         <content>
