Agregado módulo Cliente - Agregar/Reemplazar foto cliente Agregada columna de acciones al módulo cliente Corregido entidad, mapper y DAO de FotoCliente y TipoFoto Corregido módulo Capturar fotos

--- a/src/empenofacil/view/Clientes.fxml
+++ b/src/empenofacil/view/Clientes.fxml
@@ -28,6 +28,7 @@
                       <TableColumn fx:id="apellidoP" prefWidth="75.0" text="Apellido Paterno" />
                       <TableColumn fx:id="curp" prefWidth="75.0" text="CURP" />
                       <TableColumn fx:id="rfc" prefWidth="75.0" text="RFC" />
+                  <TableColumn fx:id="colAcciones" prefWidth="75.0" text="Opciones" />
                   </columns>
                   <columnResizePolicy>
                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
