--- a/src/empenofacil/view/CapturarFoto.fxml
+++ b/src/empenofacil/view/CapturarFoto.fxml
@@ -1,16 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.CapturarFotoController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.CapturarFotoController">
    <children>
-      <ComboBox fx:id="seleccionaCamara" layoutX="46.0" layoutY="49.0" prefHeight="25.0" prefWidth="170.0" promptText="Selecioana Camara Web" />
-      <Button fx:id="tomarFoto" layoutX="46.0" layoutY="109.0" mnemonicParsing="false" text="Tomar Foto" />
-      <Pane fx:id="panelFoto" layoutX="238.0" layoutY="34.0" prefHeight="480.0" prefWidth="640.0" />
-      <Button fx:id="fotoguardar" layoutX="131.0" layoutY="109.0" mnemonicParsing="false" text="Guardar Foto" />
+      <VBox fx:id="panelOpciones" layoutX="46.0" layoutY="49.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+         <children>
+            <Label text="Fotos">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Separator prefWidth="200.0" />
+            <Label text="Cámara web" />
+            <ChoiceBox fx:id="seleccionaCamara" prefWidth="150.0" />
+            <HBox spacing="5.0">
+               <children>
+                  <Button fx:id="tomarFoto" mnemonicParsing="false" onAction="#tomarFoto" text="Tomar foto" />
+                  <Button fx:id="tomarFotoDeNuevo" mnemonicParsing="false" onAction="#tomarFotoDeNuevo" text="Tomar foto de nuevo" />
+                  <Button fx:id="guardarFoto" mnemonicParsing="false" onAction="#guardarFoto" text="Guardar foto" />
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <VBox fx:id="clienteV">
+               <children>
+                  <Label text="Cliente">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="clienteC" prefWidth="150.0" />
+               </children>
+            </VBox>
+            <VBox fx:id="prendaV">
+               <children>
+                  <Label text="Prenda">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox prefWidth="150.0" />
+               </children>
+            </VBox>
+            <Separator layoutX="10.0" layoutY="202.0" prefWidth="200.0" />
+            <Button mnemonicParsing="false" onAction="#cerrar" text="Cerrar" />
+         </children>
+      </VBox>
+      <Pane fx:id="panelFoto" layoutX="238.0" layoutY="34.0" prefHeight="480.0" prefWidth="640.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0" />
    </children>
+   <padding>
+      <Insets bottom="5.0" right="5.0" />
+   </padding>
 </AnchorPane>
