--- a/src/empenofacil/view/Menu.fxml
+++ b/src/empenofacil/view/Menu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -19,6 +20,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
+                  <Button mnemonicParsing="false" onAction="#cerrarSesion" text="Cerrar sesión" />
                </children>
                <opaqueInsets>
                   <Insets />
