--- a/src/empenofacil/view/Contratos.fxml
+++ b/src/empenofacil/view/Contratos.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -25,7 +26,7 @@
                                       <Font name="System Bold" size="18.0" />
                                   </font>
                               </Label>
-                              <Button mnemonicParsing="false" onAction="#nuevo" text="Nuevo empeño" />
+                              <Button mnemonicParsing="false" onAction="#nuevoContrato" text="Nuevo empeño" />
                      </children>
                   </HBox>
                         <TextField fx:id="buscar" promptText="Buscar empeño..." AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -50,7 +51,7 @@
                 </AnchorPane>
             </children>
         </VBox>
-        <VBox fx:id="contratoV" layoutX="10.0" layoutY="10.0" visible="false">
+        <VBox fx:id="prendasV" layoutX="10.0" layoutY="10.0" visible="false">
             <children>
                 <AnchorPane VBox.vgrow="ALWAYS">
                     <children>
@@ -61,10 +62,18 @@
                                       <Font name="System Bold" size="18.0" />
                                   </font>
                               </Label>
-                              <Button mnemonicParsing="false" onAction="#regresar" text="Regresar a empeños" />
+                        <Button mnemonicParsing="false" onAction="#nuevaPrenda" text="Agregar prenda" />
+                              <Button mnemonicParsing="false" onAction="#regresarContratos" text="Regresar a empeños" />
                      </children>
                   </HBox>
-                        <TableView fx:id="prendas" prefHeight="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+                  <HBox alignment="CENTER_LEFT" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="30.0">
+                     <children>
+                        <Label text="Cliente" />
+                        <ChoiceBox fx:id="clientesC" prefWidth="150.0" />
+                        <Button fx:id="guardarContrato" mnemonicParsing="false" text="Guardar empeño" />
+                     </children>
+                  </HBox>
+                        <TableView fx:id="prendas" prefHeight="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
                             <columns>
                                 <TableColumn fx:id="nombre" prefWidth="75.0" text="Nombre" />
                                 <TableColumn fx:id="precio" prefWidth="75.0" text="Precio" />
@@ -84,5 +93,31 @@
                 </AnchorPane>
             </children>
         </VBox>
+      <VBox fx:id="formV" visible="false">
+         <children>
+            <AnchorPane VBox.vgrow="ALWAYS">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               <children>
+                  <HBox spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label text="Prenda">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="guardarPrenda" mnemonicParsing="false" onAction="#guardarPrenda" text="Guardar prenda" />
+                        <Button mnemonicParsing="false" onAction="#regresarPrendas" text="Regresar a prendas" />
+                     </children>
+                  </HBox>
+                  <VBox fx:id="form" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="-5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </AnchorPane>
+         </children>
+      </VBox>
     </children>
 </StackPane>
