Agregadas pruebas Inicio de sedión - Empleado Agregadas bibliotecas JavaFX JUnit-4 Testrunner y TestFX Agregada clase utilitaria de pruebas (UtilTest.java)

--- a/src/empenofacil/view/Login.fxml
+++ b/src/empenofacil/view/Login.fxml
@@ -41,7 +41,7 @@
       </GridPane>
       <HBox alignment="CENTER" spacing="5.0">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
+            <Button fx:id="login" defaultButton="true" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
             <Button cancelButton="true" mnemonicParsing="false" onAction="#salir" text="Salir" />
          </children>
          <VBox.margin>
