--- a/src/empenofacil/view/Menu.fxml
+++ b/src/empenofacil/view/Menu.fxml
@@ -47,9 +47,9 @@
          </content>
       </Tab>
       <Tab text="Ventas">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </content>
+         <content>
+            <fx:include source="Ventas.fxml" />
+         </content>
       </Tab>
       <Tab text="Inventario">
         <content>
