--- a/src/empenofacil/view/Clientes.fxml
+++ b/src/empenofacil/view/Clientes.fxml
@@ -20,7 +20,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" onAction="#nuevo" text="Nuevo cliente" AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="nuevo" mnemonicParsing="false" onAction="#nuevo" text="Nuevo cliente" AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="0.0" />
             <TextField fx:id="buscar" promptText="Buscar cliente..." AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
               <TableView fx:id="clientes" prefHeight="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
                   <columns>
@@ -48,7 +48,7 @@
          </VBox.margin></VBox>
       <HBox fx:id="acciones" alignment="TOP_RIGHT" spacing="10.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+            <Button fx:id="cancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
             <Button fx:id="guardar" mnemonicParsing="false" onAction="#guardar" text="Guardar" />
          </children>
          <VBox.margin>
