Modulo:creación de reportes

--- a/src/empenofacil/view/SeleccionarArticulos.fxml
+++ b/src/empenofacil/view/SeleccionarArticulos.fxml
@@ -7,20 +7,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox spacing="20.0">
          <children>
-            <RadioButton contentDisplay="CENTER" mnemonicParsing="false" text="Fecha y Tipo" />
-            <RadioButton contentDisplay="CENTER" mnemonicParsing="false" text="Serie, modelo o bolsa">
+            <RadioButton fx:id="fechar" contentDisplay="CENTER" mnemonicParsing="false" text="Fecha y Tipo" />
+            <RadioButton fx:id="seriebolsar" contentDisplay="CENTER" mnemonicParsing="false" text="Serie, modelo o bolsa">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </RadioButton>
          </children>
       </HBox>
-      <HBox alignment="CENTER_LEFT" spacing="20.0">
+      <HBox fx:id="iniciol" alignment="CENTER_LEFT" spacing="20.0">
          <children>
             <Label alignment="CENTER_RIGHT" text="Inicio">
                <HBox.margin>
@@ -30,8 +29,8 @@
                   <Insets left="15.0" right="-15.0" />
                </padding>
             </Label>
-            <DatePicker />
-            <Label alignment="CENTER_RIGHT" text="Fin">
+            <DatePicker fx:id="iniciocalendar" />
+            <Label fx:id="finl" alignment="CENTER_RIGHT" text="Fin">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -39,20 +38,20 @@
                   <Insets left="15.0" right="-15.0" />
                </padding>
             </Label>
-            <DatePicker />
-            <Label text="Prendas con:">
+            <DatePicker fx:id="fincalendar" />
+            <Label fx:id="prendasl" text="Prendas con:">
                <padding>
                   <Insets left="15.0" right="-15.0" />
                </padding>
             </Label>
-            <RadioButton mnemonicParsing="false" text="Oro" />
-            <RadioButton mnemonicParsing="false" text="Aparatos" />
+            <RadioButton fx:id="ororb" mnemonicParsing="false" text="Oro" />
+            <RadioButton fx:id="aparatosrb" mnemonicParsing="false" text="Aparatos" />
          </children>
       </HBox>
       <HBox alignment="CENTER_RIGHT" spacing="20.0">
          <children>
-            <Button mnemonicParsing="false" text="Buscar" />
-            <Button mnemonicParsing="false" text="Limpiar" />
+            <Button fx:id="buscarbn" mnemonicParsing="false" text="Buscar" />
+            <Button fx:id="limpiarbn" mnemonicParsing="false" text="Limpiar" />
          </children>
       </HBox>
       <HBox VBox.vgrow="ALWAYS">
@@ -64,7 +63,7 @@
                       <TableColumn prefWidth="75.0" text="Seleccionado" />
                       <TableColumn prefWidth="75.0" text="Bolsa" />
                         <TableColumn prefWidth="75.0" text="Contrato" />
-                        <TableColumn minWidth="-Infinity" prefWidth="350.0" text="Descripción" />
+                        <TableColumn fx:id="articulostable" minWidth="-Infinity" prefWidth="350.0" text="Descripción" />
                         <TableColumn prefWidth="75.0" text="Piezas" />
                         <TableColumn prefWidth="75.0" text="Modelo" />
                         <TableColumn prefWidth="75.0" text="Prestamo" />
@@ -81,8 +80,8 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" spacing="20.0">
          <children>
-            <Button mnemonicParsing="false" text="Aceptar" />
-            <Button mnemonicParsing="false" text="Cancelar" />
+            <Button fx:id="aceptarbn" mnemonicParsing="false" text="Aceptar" />
+            <Button fx:id="cancelarbn" mnemonicParsing="false" text="Cancelar" />
          </children>
       </HBox>
    </children>
